--- a/app/view/index.html
+++ b/app/view/index.html
@@ -7,10 +7,9 @@
 <body>
 <div>
   <div class='center'>
-    <div class='title'>Classify Bear Images 🐻</div>
+    <div class='title'>Classify Pocket Cube Images (2x2x2 Rubik's Cube) </div>
     <p>
-      Use images of <strong>teddy</strong> bears, <strong>black</strong> bears, <strong>grizzly</strong> bears, or
-      all three!
+      Use images of a <strong>SOLVED</strong> cube, <strong>SCRAMBLED</strong> cube, or images with <strong>NO</strong> cube!
     </p>
     <div class='content'>
       <div class='no-display'>
